2015-01-23      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  add $(TIMEVAR_H) to all m2.flex
	  dependant rules.
	* gm2/examples/pge:  more changes.

2015-01-21      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge/examples:  another interim checkin.
          (More debugging statements added and internal checking).
	* gm2/gm2-libs-iso/RawIO.mod:  (Read) call FlushOutErr.
	* gm2/gm2-libs-iso/TextIO.mod:  (Read) call FlushOutErr.
	* gm2/gm2-libs/FIO.def:  export FlushOutErr.
	* This fixes a bug reported by Steve Giess, which allows
	  iso and pim libraries to be mixed.  It also fixes
	  the interactive behaviour of the iso libraries so that
	  output is flushed before data is read.

2015-01-15      Gaius Mulley <gaius@gnu.org>

	* released GM2 1.1.3
	* gm2/gm2-libs/config-host:  rebuilt.
	* gm2/gm2-libs/config-host.in:  1.1.3.
	* gm2/gm2-libs/config-target:  rebuilt.
	* gm2/gm2-libs/config-target.in:  1.1.3.
	* gm2/gm2.texi:  updated release map.
	* gm2/version.c:  1.1.3.
	* gm2/examples/pge/examples:  improved debugging log messages.

2015-01-09      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  changed path to gnu.eps to contain
	  $(objdir).
	* gm2/examples/pge/examples/exampleBoxes.py:  more intermin
	  changes.
	* gm2/examples/pge/pge.py:  more intermin changes.
	* gm2/examples/pge/pgeplayback.py:  more intermin changes.
	* gm2/examples/pge/twoDsim.mod:  more intermin changes.

2015-01-02      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-iso/ConvStringLong.mod:  check to see if the
	  conversion generates a NAN and return accordingly.
	* gm2/gm2-libs-iso/ConvStringReal.mod:  check to see if the
	  conversion generates a NAN and return accordingly.
	  This fixes a bug reported by:  Michael Riedl.

2015-01-01      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge:  many bugfixes to the shared library example.
	* gm2/gm2-compiler/M2GenGCC.mod:  FoldConvert use PopKindTree.
          PopKindTree new procedure function.  This fixes a bug reported