@@ -1,3 +1,8 @@
+2015-01-27      Gaius Mulley <gaius@gnu.org>
+
+	* gm2/gm2-libs-iso/MemStream.mod:  removed debugging printf.
+	* gm2/examples/pge:  more changes.
+
 2015-01-23      Gaius Mulley <gaius@gnu.org>
 
 	* gm2/Make-lang.in:  add $(TIMEVAR_H) to all m2.flex
